--- a/app/src/main/res/layout/fragment_main_drawer.xml
+++ b/app/src/main/res/layout/fragment_main_drawer.xml
@@ -13,4 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pause Button"
+        android:id="@+id/pauseButton"
+        android:layout_below="@+id/section_label"
+        android:layout_toRightOf="@+id/section_label"
+        android:layout_toEndOf="@+id/section_label"
+        android:layout_marginTop="80dp" />
+
 </RelativeLayout>
