--- a/app/src/main/res/layout/fragment_main_drawer.xml
+++ b/app/src/main/res/layout/fragment_main_drawer.xml
@@ -16,7 +16,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pause Button"
+        android:text="Pause"
         android:id="@+id/pauseButton"
         android:layout_below="@+id/section_label"
         android:layout_toRightOf="@+id/section_label"
