--- a/app/src/main/res/layout/playbutton.xml
+++ b/app/src/main/res/layout/playbutton.xml
@@ -87,5 +87,14 @@
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:layout_weight="1"
-        android:background="#e2f26b"></LinearLayout>
+        android:background="#e2f26b">
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar2"
+            android:progress="50"
+            android:paddingTop="20dp" />
+    </LinearLayout>
+
 </LinearLayout>
