--- a/app/src/main/res/layout/stopbutton.xml
+++ b/app/src/main/res/layout/stopbutton.xml
@@ -7,6 +7,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewStop"
         android:src="@drawable/stopbutton" />
 </LinearLayout>
