--- a/app/src/main/res/layout/playbutton.xml
+++ b/app/src/main/res/layout/playbutton.xml
@@ -20,7 +20,7 @@
         android:layout_weight="1"
         android:paddingTop="25dp"
         android:paddingBottom="15dp"
-        android:id="@+id/">
+        android:id="@+id/linearLayout1">
 
         <ImageView
             android:layout_width="wrap_content"
