--- a/app/src/main/res/layout/playbutton.xml
+++ b/app/src/main/res/layout/playbutton.xml
@@ -11,7 +11,15 @@
         android:layout_height="150dp"
         android:layout_weight="1"
         android:background="#e2f26b"
-        android:id="@+id/linearLayout" />
+        android:id="@+id/linearLayout" >
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar2"
+            android:progress="50"
+            android:paddingTop="20dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -83,18 +91,35 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:layout_weight="1"
         android:background="#e2f26b">
 
-        <SeekBar
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/seekBar2"
-            android:progress="50"
-            android:paddingTop="20dp" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="### bpm"
+            android:id="@+id/textView4"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="30dp"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="### bpm"
+            android:id="@+id/textView5"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:gravity="center" />
     </LinearLayout>
 
 </LinearLayout>
